--- a/src/2-form.html
+++ b/src/2-form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></Form></title>
+    <title>Form</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -12,8 +12,22 @@
       <div class="container">
         <a class="back-link" href="./index.html">Go back</a>
         <h1 class="main-title">Form</h1>
+
+        <!-- Форма з полями Email і Message -->
+        <form class="feedback-form" autocomplete="off">
+          <label>
+            Email
+            <input type="email" name="email" autofocus />
+          </label>
+          <label>
+            Message
+            <textarea name="message" rows="8"></textarea>
+          </label>
+          <button type="submit">Submit</button>
+        </form>
       </div>
     </main>
+
     <script type="module" src="./js/2-form.js"></script>
-   </body>
+  </body>
 </html>
