--- a/src/2-form.html
+++ b/src/2-form.html
@@ -8,26 +8,28 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <main>
-      <div class="container">
-        <a class="back-link" href="./index.html">Go back</a>
-        <h1 class="main-title">Form</h1>
+ <main>
+  <div class="container">
+    <div class="form-page">
+      <a class="back-link" href="./index.html">Go back</a>
+      <h1 class="main-title">Form</h1>
 
-        <!-- Форма з полями Email і Message -->
-        <form class="feedback-form" autocomplete="off">
-          <label>
-            Email
-            <input type="email" name="email" autofocus />
-          </label>
-          <label>
-            Message
-            <textarea name="message" rows="8"></textarea>
-          </label>
-          <button type="submit">Submit</button>
-        </form>
-      </div>
-    </main>
+      <form class="feedback-form" autocomplete="off">
+        <label>
+          Email
+          <input type="email" name="email" autofocus />
+        </label>
 
+        <label>
+          Message
+          <textarea name="message" rows="8"></textarea>
+        </label>
+
+        <button type="submit">Submit</button>
+      </form>
+    </div>
+  </div>
+</main>
     <script type="module" src="./js/2-form.js"></script>
   </body>
 </html>
